Configure the API in according with the splitting
