# swagger.yml
@@ -68,12 +68,12 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Result'
-  /user/data:
-    put:
+  /user/login:
+    post:
       tags:
         - User
-      summary: Update the user data.
-      operationId: app.modify_user
+      summary: From email and password it does the login and return the user data.
+      operationId: app.login_user
       requestBody:
         required: true
         content:
@@ -99,18 +99,57 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Result'
-  /user/delete:
-    post:
+  /user/data/{id}:
+    put:
       tags:
         - User
       summary: Update the user data.
-      operationId: app.delete_user
+      operationId: app.modify_user
+      parameters:
+        - in: path
+          name: id
+          schema:
+            type: integer
+          required: true
+          description: The user ID
       requestBody:
         required: true
         content:
           application/json:
             schema:
               $ref: '#/components/schemas/UserWithRole'
+      responses:
+        200:
+          description: "The operation is done"
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Result'
+        400:
+          description: "Resource don't found"
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Result'
+        500:
+          description: "The code returned if there is some error on server, e.g: user already exist"
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Result'
+  /user/delete/{id}:
+    delete:
+      tags:
+        - User
+      summary: Update the user data.
+      operationId: app.delete_user
+      parameters:
+        - in: path
+          name: id
+          schema:
+            type: integer
+          required: true
+          description: The user ID
       responses:
         200:
           description: "The operation is done"
